minor style change in user profile

--- a/client/stylesheet/styles.css
+++ b/client/stylesheet/styles.css
@@ -1,3 +1,4 @@
+/* iframe part */
 .video-responsive {
     /* overflow: hidden; */
     padding: 20px;
@@ -18,3 +19,5 @@
     flex-wrap: wrap;
     height: 100%;
 }
+
+/* user profile */
