--- a/client/stylesheet/styles.css
+++ b/client/stylesheet/styles.css
@@ -1,44 +1,47 @@
 /* iframe part */
 .video-responsive {
-    /* overflow: hidden; */
-    padding: 20px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
+  /* overflow: hidden; */
+  padding: 20px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .video-responsive iframe {
-    /* position: absolute; */
-    height: 100%;
-    width: 100%;
+  /* position: absolute; */
+  height: 100%;
+  width: 100%;
 }
 
 .videoDisplay {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 100%;
-    text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  text-align: center;
 }
 
 .searchResults {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    height: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  margin-left: 10%;
 }
 /* user profile */
 .user_profile {
-    /* text-align: center; */
-    margin: 20px 30px;
+  /* text-align: center; */
+  margin: 20px 30px;
 }
 
 .line_between {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-top: 1px solid grey;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-top: 1px solid grey;
 }
 
 .uploadVideo {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
