--- a/client/stylesheet/styles.css
+++ b/client/stylesheet/styles.css
@@ -25,8 +25,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 100%;
-}
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    margin-left: 10%;
+  }
 /* user profile */
 .user_profile {
     /* text-align: center; */
